--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gror_email_module",
+  "name": "gror_mail",
   "version": "1.0.17",
   "description": "a module to be used to generated pdf or send emails directly",
   "main": "index.js",
@@ -15,5 +15,17 @@
     "nodemailer": "^6.9.1",
     "nodemailer-smtp-transport": "^2.4.2",
     "puppeteer": "^19.8.5"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CollinsMunene/gror_mail.git"
+  },
+  "keywords": [
+    "html-pdf",
+    "mailjet"
+  ],
+  "bugs": {
+    "url": "https://github.com/CollinsMunene/gror_mail/issues"
   }
 }
